2008-05-30  Neal H. Walfield  <neal@gnu.org>

	* storage.h (storage_check_reserve): New declaration.
	* storage.c (MIN_FREE_PAGES): Rename from this...
	(FREE_PAGES_LOW_WATER): ... to this and bump to 64.  Update users.
	(FREE_PAGES_SERIALIZE): New define.
	(storage_low_mutex): New variable.
	(storage_low_mutex_once): Likewise.
	(storage_low_mutex_init): New function.
	(storage_alloc): Move folio allocation code to...
	(storage_check_reserve_internal): ... this new function.  If the
	number of pages is less than FREE_PAGES_SERIALIZE, take the
	storage_low_mutex lock.
	(storage_alloc): Call that function.
	(storage_check_reserve): New function.

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* headers.m4: Link files into `sysroot/include/' instead of `include/'.
	Create symbolic link to package's library in `sysroot/lib/'.
	* Makefile.am [ENABLE_TESTS]: Don't build package's library.

2008-05-29  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (exception_handler_activated): Assume the fault is
	on the stack if it is one page above or three pages below the
	stack pointer.
	(exception_handler_init): Allocate an area of address space
	EXCEPTION_STACK_SIZE bytes larges.  Fill it with pages.  Set the
	first page as the thread's exception page and the top of the area
	minus one word as the stack pointer.  Set the last word to the
	location of the exception page.
	* ia32-exception-entry.S: Include <hurd/exceptions.h>.
	(PAGESIZE): Don't define.
	(_exception_handler_entry): Rewrite to not assume that the
	exception page is at the start of the page in which the stack
	pointer is, but at the location stored in the word after the bottom
	of the stack.

	* Makefile.am (libhurd_mm_a_CCASFLAGS): New variable.

	* pager.c (ensure_stack): Change SPACE to be EXCEPTION_STACK_SIZE
	- PAGESIZE bytes large.  Write to each page.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* as.h (slot_lookup): Remove parameter type.  Update users.